--- a/templates/results.html
+++ b/templates/results.html
@@ -4,8 +4,7 @@
 
 
 <p>
-    #4) Finish the route called /results. Then, display appropriate results on 
-    this page.
+    Hi {{person}}, you chose {{result}}
 </p>
 
 
